[package]
name = "syncthreads"
version = "0.4.2"
edition = "2021"
authors = ["sarah <>"]
description = "Safe thread synchronization"
readme = "README.md"
repository = "https://github.com/sarah-ek/syncthreads/"
license = "MIT"
keywords = ["synchronization", "multithreading", "barrier"]

[dependencies]
aligned-vec = "0.5.0"
crossbeam = "0.8.4"
equator = "0.2.1"
parking_lot_core = "0.9.10"
reborrow = "0.5.5"

[dev-dependencies]
rayon = "1.10.0"
threadpool = "1.8.1"
threadpool_scope = "0.1.0"
core_affinity = "0.8.1"
tokio = { version = "1.37.0", features = ["test-util", "rt", "rt-multi-thread", "tokio-macros", "macros"] }
tokio-scoped = "0.2.0"
pollster = "0.3.0"
futures = "0.3.30"
diol = { version = "0.8.3", default-features = false }

[[bench]]
name = "barrier"
harness = false
